--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <h2>BENEFITS</h2>
         <div id="benefitsContainer">
           <div class="benefits-card">
-            <h3>Increase Customer Acquisition</h3>
+            <h3>Increase Customer <br>Acquisition</h3>
             <p>
               From qualified leads to online purchases, we’ll optimize your full
               funnel to increase conversion rates by creating frictionless user
@@ -69,76 +69,68 @@
             </p>
             <ul>
                 <li>
-                    <img src="" alt="">
+                    <img src="img/index/check.svg" alt="">
                     Increase your traffic and generate leads
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="img/index/check.svg" alt="">
                     Optimize your marketing campaigns
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="img/index/check.svg" alt="">
                     Get traction for new product launches
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="img/index/check.svg" alt="">
                     Enhance your SEO and Content Marketing
                 </li>
             </ul>
+            <img class="benefits-cardimg" src="img/index/objects.svg" alt="">
+          </div>
+          
+          <div class="benefits-card">
+            <h3>Increase Conversions</h3>
+            <p>
+              From qualified leads to online purchases, we’ll optimize your full funnel to increase conversion rates by creating frictionless user journeys.
+            </p>
+            <ul>
+                <li>
+                    <img src="img/index/check.svg" alt="">
+                    Optimize your onboarding process
+                </li>
+                <li>
+                    <img src="img/index/check.svg" alt="">
+                    Automate your onboarding communication
+                </li>
+                <li>
+                    <img src="img/index/check.svg" alt="">
+                    Remove activation bottlenecks
+                </li>
+            </ul>
+            <img class="benefits-cardimg" src="img/index/objects2.svg" alt="">
           </div>
           <div class="benefits-card">
-            <h3>Increase Customer Acquisition</h3>
+            <h3>Reach Sustainable <br> Growth</h3>
             <p>
-              From qualified leads to online purchases, we’ll optimize your full
-              funnel to increase conversion rates by creating frictionless user
-              journeys.
+              We perform an extensive growth audit and turn it into a marketing roadmap, having an accurate and thorough understanding of your customers and how they buy from you.
             </p>
             <ul>
                 <li>
-                    <img src="" alt="">
-                    Increase your traffic and generate leads
+                    <img src="img/index/check.svg" alt="">
+                    Take the best decision with real insights
                 </li>
                 <li>
-                    <img src="" alt="">
-                    Optimize your marketing campaigns
+                    <img src="img/index/check.svg" alt="">
+                    Accurate funnel analysis
                 </li>
                 <li>
-                    <img src="" alt="">
-                    Get traction for new product launches
-                </li>
-                <li>
-                    <img src="" alt="">
-                    Enhance your SEO and Content Marketing
+                    <img src="img/index/check.svg" alt="">
+                    Increase your payable customer base
                 </li>
             </ul>
+            <img class="benefits-cardimg" src="img/index/objects3.svg" alt="">
           </div>
-          <div class="benefits-card">
-            <h3>Increase Customer Acquisition</h3>
-            <p>
-              From qualified leads to online purchases, we’ll optimize your full
-              funnel to increase conversion rates by creating frictionless user
-              journeys.
-            </p>
-            <ul>
-                <li>
-                    <img src="" alt="">
-                    Increase your traffic and generate leads
-                </li>
-                <li>
-                    <img src="" alt="">
-                    Optimize your marketing campaigns
-                </li>
-                <li>
-                    <img src="" alt="">
-                    Get traction for new product launches
-                </li>
-                <li>
-                    <img src="" alt="">
-                    Enhance your SEO and Content Marketing
-                </li>
-            </ul>
-          </div>
-        </section>
+          </section>
 
 
           <section id="growth-process">
