--- a/index.html
+++ b/index.html
@@ -228,31 +228,38 @@
                         milestones.</p>
                 </div>
               </div>
-              <div>See how we work</div>
+              <div id="growth-solutions-button"><a href="portfolio.html"> See how we work</a></div>
           </section>
 
           <section id="headquarters">
               <h2>Headquarters</h2>
               <div id="headquarters-cards">
-                  <div class="headquarters-card">
+                  <div class="headquarters-card" id="headquarters-bsas">
                       <img src="img/index/buenosaires.svg" alt="Buenos Aires">
                       <p><strong>Paraná 1073, C1018 ADA</strong>
                     <br>Available from 9 to 16hs ART
                     <br>+54 (011) 3986-5738</p>
                   </div>
-                  <div class="headquarters-card"></div>
+
+                  <div class="headquarters-card" id="headquarters-miami">
                   <img src="img/index/miami.svg" alt="Miami">
                   <p><strong>Paraná 1073, C1018 ADA</strong>
                     <br>Available from 9 to 16hs ART
                     <br>+54 (011) 3986-5738</p>
               </div>
+            </div>
           </section>
 
           <footer>
+            <div id="footercontainer">
               <img src="img/index/city.svg" alt="">
+              
             <h1>Want to get in touch with us?</h1>
             <h4>Complete the following form and our team will contact you shortly.</h4>
+          </div>
             <div id="footer-cards">
+
+
                 <div class="footer-card">
                     <h3>One-on-one Meeting</h3>
                     <h4> <img src="img/index/calendar.svg" alt="">Make a reservation</h4>
@@ -262,8 +269,7 @@
                     <h3>Social Media</h3>
                     <h4> <img src="img/index/instagram-logo.svg" alt="">@holovox.gh</h4>
                 </div>
-
-            </div>
+          </div>
           </footer>
 
         </section>
