CSS & HTML to bugfix

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 
     <section id="main-content">
       <nav>
-        
         <img src="img/index/logo-all-white-low.svg" alt="Holovox logo" />
         <ul>
           <li><strong>HOME</strong></li>
@@ -29,16 +28,36 @@
         </ul>
       </nav>
 
+
+      <div class="menu-wrap">
+    <input type="checkbox" class="toggler">
+    <div class="hamburger"><div></div></div>
+    <div class="menu">
+      <div>
+        <div>
+          <ul>
+            <li><a href="index.html"><strong>Home</strong></a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="aboutus.html">About Us</a></li>
+            <li><a href="pricing.html">Pricing</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
       <section id="mainFrame">
-          <div class="container">
+                  <div class="container">
+            <div id="header-img-container">
         <img src="img/index/Imagen 3.svg" alt="">
+        <img src="img/index/logo-all-white-low.svg" id="mainFrame-logo" alt="">
+      </div>
         <div id="white-fade"></div>
         <div id="white"></div>
         <div id="mainText">
           <h1>
-            Helping Startups & Established 
-            <br> Companies Achieve
-            <br><strong>Rapid and Sustainable Growth</strong>
+            Helping Startups & Established Companies Achieve <br><strong>Rapid and Sustainable Growth</strong>
           </h1>
         </div>
         <div id="mainFrame-button"><a href="">See more</a></div>
