--- a/portfolio.html
+++ b/portfolio.html
@@ -29,6 +29,27 @@
           </ul>
         </nav>
 
+        <div class="menu-wrap">
+          <input type="checkbox" class="toggler" />
+          <div class="hamburger"><div></div></div>
+          <div class="menu">
+            <div>
+              <div>
+                <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li>
+                    <a href="portfolio.html"><strong>Portfolio</strong></a>
+                  </li>
+                  <li>
+                    <a href="aboutus.html">About Us</a>
+                  </li>
+                  <li><a href="pricing.html">Pricing</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <section id="portfolio-top">
           <div id="portfolio-top-container">
             <img id="top-rocket" src="img/portfolio/rocket.svg" alt="" />
