--- a/pricing.html
+++ b/pricing.html
@@ -29,6 +29,29 @@
           </ul>
         </nav>
 
+        <div class="menu-wrap">
+          <input type="checkbox" class="toggler" />
+          <div class="hamburger"><div></div></div>
+          <div class="menu">
+            <div>
+              <div>
+                <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li>
+                    <a href="portfolio.html">Portfolio</a>
+                  </li>
+                  <li>
+                    <a href="aboutus.html">About Us</a>
+                  </li>
+                  <li>
+                    <a href="pricing.html"><strong>Pricing</strong></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <section id="pricing-title">
           <div id="pricing-title-container">
             <h1>Pricing</h1>
@@ -135,21 +158,22 @@
         </section>
 
         <div id="pricing-coupon-container">
-          <img id="pricing-coupon" src="img/pricing/cupon.svg" alt="" />
-          <div id="pricing-coupon-text">
-            <div id="pricing-coupon-info">
-              <h3>
-                <strong>FULL GROWTH PACK: </strong> <br />PACK CORE + COMMUNITY
-                + CONTENT
-              </h3>
-            </div>
-            <div id="pricing-coupon-discount">
-              <h2>15%</h2>
-              <h2 id="pricing-coupon-discount-off">OFF</h2>
+          <div id="pricing-coupon">
+            <div id="pricing-coupon-text">
+              <div id="pricing-coupon-info">
+                <h3>
+                  <strong>FULL GROWTH PACK: </strong> <br />PACK CORE +
+                  COMMUNITY + CONTENT
+                </h3>
+              </div>
+              <div id="pricing-coupon-discount">
+                <h2>15%</h2>
+                <h2 id="pricing-coupon-discount-off">OFF</h2>
+              </div>
             </div>
           </div>
         </div>
-
+        <div class="spacer"></div>
         <footer>
           <div id="footer-city"></div>
           <div id="footer-container">
