--- a/aboutus.html
+++ b/aboutus.html
@@ -29,6 +29,27 @@
           </ul>
         </nav>
 
+        <div class="menu-wrap">
+          <input type="checkbox" class="toggler">
+          <div class="hamburger"><div></div></div>
+          <div class="menu">
+            <div>
+              <div>
+                <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li>
+                    <a href="portfolio.html">Portfolio</a>
+                  </li>
+                  <li>
+                    <a href="aboutus.html"><strong>About Us</strong></a>
+                  </li>
+                  <li><a href="pricing.html">Pricing</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <section id="aboutus-top">
           <img id="aboutus-top-img" src="img/aboutus/plants.svg" alt="" />
           <h1>About Us</h1>
